--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -117,7 +117,6 @@
         </app-campo-control-erro>
       </div>
     </div>
-
   </div>
 
   <!--select com objeto (necessário usar o compareWith)-->
@@ -130,10 +129,20 @@
     </div>
   </div>
 
+  <!--select multiplo-->
+  <div class="form-group">
+    <div class="col-md-3" [ngClass]="aplicaCssErro('tecnologias')">
+      <label for="tecnologias" class="control-label">Tecnologias</label>
+      <select type="text" class="form-control" id="tecnologias" formControlName="tecnologias" multiple>
+        <option *ngFor="let tecnologia of tecnologias" [value]="tecnologia.nome">{{tecnologia.desc}}</option>
+      </select>
+    </div>
+  </div>
 
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button class="btn btn-primary" type="submit">Submit</button>
   <button class="btn" (click)="resetar()">Cancelar</button>
-  <button class="btn" (click)="setarCargo()">Cargo</button>
+  <button class="btn btn-info" (click)="setarCargo()">Cargo</button>
+  <button class="btn btn-info" (click)="setarTecnologias()">Tecnologias</button>
 
   <app-form-debug [form]="formulario"></app-form-debug>
 </form>
