--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -169,6 +169,10 @@
 					<input type="checkbox" [formControlName]="i"> {{frameworks[i]}}
 				</label>
 			</div>
+            <app-campo-control-erro
+                    [mostrarErro]="verificaValidTouched('frameworks')"
+                    msgErro="Selecione 1 opção.">
+            </app-campo-control-erro>
 		</div>
 	</div>
 
