--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -45,8 +45,12 @@
              formControlName="cep"
              (blur)="consultaCEP()">
         <app-campo-control-erro
-            [mostrarErro]="verificaValidTouched('endereco.cep')"
-            msgErro="CEP é obrigatório.">
+                [mostrarErro]="verificaRequired('endereco.cep')"
+                msgErro="CEP é obrigatório.">
+        </app-campo-control-erro>
+        <app-campo-control-erro
+                [mostrarErro]="formulario.get('endereco.cep').hasError('cepInvalido')"
+                msgErro="CEP inválido.">
         </app-campo-control-erro>
       </div>
 
