--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -8,11 +8,8 @@
       <input type="text" class="form-control"
            formControlName="nome"
            id="nome" placeholder="Nome">
-
-      <app-campo-control-erro
-          [mostrarErro]="verificaValidTouched('nome')"
-          msgErro="Nome é obrigatório.">
-      </app-campo-control-erro>
+      <!--mensagem de erro geral-->
+      <app-error-msg [control]="formulario.get('nome')" label="nome"> </app-error-msg>
     </div>
   </div>
 
