--- a/forms/src/app/data-form/data-form.component.html
+++ b/forms/src/app/data-form/data-form.component.html
@@ -20,12 +20,7 @@
     <div class="col-sm-12">
       <input type="email" class="form-control"
            formControlName="email" id="email" placeholder="nome@email.com">
-      <app-campo-control-erro
-          [mostrarErro]="verificaValidTouched('email')" msgErro="Email é obrigatório.">
-      </app-campo-control-erro>
-      <app-campo-control-erro
-          [mostrarErro]="verificaEmailInvalido()" msgErro="Email inválido.">
-      </app-campo-control-erro>
+		<app-error-msg [control]="formulario.get('email')" label="Email"></app-error-msg>
 		<app-campo-control-erro
 				[mostrarErro]="formulario.get('email').status === 'PENDING'" msgErro="Validando email...">
 		</app-campo-control-erro>
@@ -45,13 +40,9 @@
 			<label for="confirmarEmail" class="control-label">Confirmar email</label>
 		</div>
 		<div class="col-sm-12">
-			<input type="email" class="form-control"
-				   formControlName="confirmarEmail"
+			<input type="email" class="form-control" formControlName="confirmarEmail"
 				   id="confirmarEmail" placeholder="nome@email.com">
-			<app-campo-control-erro
-					[mostrarErro]="verificaValidTouched('confirmarEmail')"
-					msgErro="Confirmar email é obrigatório.">
-			</app-campo-control-erro>
+			<app-error-msg [control]="formulario.get('confirmarEmail')" label="Confirmar Email"></app-error-msg>
 		</div>
 	</div>
 
@@ -78,24 +69,14 @@
         <label for="cep" class="control-label">CEP</label>
         <input type="text" class="form-control" id="cep"
              formControlName="cep">
-        <app-campo-control-erro
-                [mostrarErro]="verificaRequired('endereco.cep')"
-                msgErro="CEP é obrigatório.">
-        </app-campo-control-erro>
-        <app-campo-control-erro
-                [mostrarErro]="formulario.get('endereco.cep').hasError('cepInvalido')"
-                msgErro="CEP inválido.">
-        </app-campo-control-erro>
+		<app-error-msg [control]="formulario.get('endereco.cep')" label="CEP"></app-error-msg>
       </div>
 
       <div class="col-md-3" [ngClass]="aplicaCssErro('endereco.numero')">
         <label for="numero" class="control-label">Número</label>
         <input type="text" class="form-control" id="numero"
              formControlName="numero">
-        <app-campo-control-erro
-            [mostrarErro]="verificaValidTouched('endereco.numero')"
-            msgErro="Número é obrigatório.">
-        </app-campo-control-erro>
+		<app-error-msg [control]="formulario.get('endereco.numero')" label="Número"></app-error-msg>
       </div>
 
       <div class="col-md-6">
@@ -113,13 +94,9 @@
       </div>
 
       <div class="col-sm-12">
-        <input type="text" class="form-control"
-             id="rua" formControlName="rua">
+        <input type="text" class="form-control" id="rua" formControlName="rua">
 
-        <app-campo-control-erro
-            [mostrarErro]="verificaValidTouched('endereco.rua')"
-            msgErro="Rua é obrigatório.">
-        </app-campo-control-erro>
+		<app-error-msg [control]="formulario.get('endereco.rua')" label="Rua"></app-error-msg>
       </div>
     </div>
 
@@ -128,20 +105,14 @@
         <label for="bairro" class="control-label">Bairro</label>
         <input type="text" class="form-control" id="bairro"
              formControlName="bairro">
-        <app-campo-control-erro
-            [mostrarErro]="verificaValidTouched('endereco.bairro')"
-            msgErro="Bairro é obrigatório.">
-        </app-campo-control-erro>
+		<app-error-msg [control]="formulario.get('endereco.bairro')" label="Bairro"></app-error-msg>
       </div>
 
       <div class="col-md-4" [ngClass]="aplicaCssErro('endereco.cidade')">
         <label for="cidade" class="control-label">Cidade</label>
         <input type="text" class="form-control" id="cidade"
              formControlName="cidade">
-        <app-campo-control-erro
-            [mostrarErro]="verificaValidTouched('endereco.cidade')"
-            msgErro="Cidade é obrigatório.">
-        </app-campo-control-erro>
+		  <app-error-msg [control]="formulario.get('endereco.cidade')" label="Cidade"></app-error-msg>
       </div>
       <!--select por id ou unico campo-->
       <div class="col-md-3" [ngClass]="aplicaCssErro('endereco.estado')">
@@ -149,10 +120,7 @@
         <select type="text" class="form-control" id="estado" formControlName="estado">
           <option *ngFor="let estado of estados | async" [value]="estado.sigla">{{estado.nome}}</option>
         </select>
-        <app-campo-control-erro
-            [mostrarErro]="verificaValidTouched('endereco.estado')"
-            msgErro="Estado é obrigatório.">
-        </app-campo-control-erro>
+		  <app-error-msg [control]="formulario.get('endereco.estado')" label="Estado"></app-error-msg>
       </div>
     </div>
   </div>
@@ -191,10 +159,7 @@
 			<label class="checkbox-inline">
 				<input type="checkbox" formControlName="termos"> Aceito os termos.
 			</label>
-			<app-campo-control-erro
-					[mostrarErro]="verificaValidTouched('termos')"
-					msgErro="Por favor aceite os termos.">
-			</app-campo-control-erro>
+			<app-error-msg [control]="formulario.get('termos')" label="Aceito os termos"></app-error-msg>
 		</div>
 	</div>
 
@@ -207,10 +172,7 @@
 					<input type="checkbox" [formControlName]="i"> {{frameworks[i]}}
 				</label>
 			</div>
-            <app-campo-control-erro
-                    [mostrarErro]="verificaValidTouched('frameworks')"
-                    msgErro="Selecione 1 opção.">
-            </app-campo-control-erro>
+			<app-error-msg [control]="formulario.get('frameworks')" label="Frameworks"></app-error-msg>
 		</div>
 	</div>
 
