--- a/requests-http/src/styles.scss
+++ b/requests-http/src/styles.scss
@@ -1,2 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+.btn{
+	&:first-child:not(:only-child) {
+		margin-right: 4px;
+	}
+}
